# RAPCG-MetaRL

./: ARCHITECTURE.md  CITATION.cff  Dockerfile  HARDWARE_COMPATIBILITY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RESOURCE_AWARE_IMPLEMENTATION.md  RLHF_inference_timed.py  SOKOBAN_UTILS_MIGRATION.md  SOLVABILITY_INTEGRATION.md  VERIFICATION_CHECKLIST.md  WHITEPAPER.md  analyze_action_penalties.py  analyze_maml_results.py  architecture_diagram.py  compare_approaches.py  config_hardware.py  fix_sokoban_prefered_levels.py  generate_paper_figures.py  graph.ipynb  inference.py  inference_graph.ipynb  inference_timed.py  inference_timing_backward.csv  inference_timing_forward.csv  inference_timing_sokoban.csv  inference_timing_sokoban_PPO_AMD_20260220_140931.csv  inference_timing_sokoban_PPO_CUDA_20260220_140931.csv  inference_timing_sokoban_corrected.csv  inference_timing_sokoban_final.csv  inference_timing_table.tex  inference_timing_zelda_PPO_AMD_20260228_113105.csv  inference_timing_zelda_PPO_CUDA_20260228_113105.csv  key-codes.md  maml_inference_timed.py  maml_trainer.py  model.py  pyproject.toml  python-tree.md  (+21 more)
.github/agents/: pcg_env.agent.md
checkpoints/MAML_20260614_122454/: best_meta_model.pt
checkpoints/sokoban_MAML_50_iteration/: best_meta_model.pt
checkpoints/sokoban_MAML_inference/: best_meta_model.pt  meta_model_iter_100.pt  meta_model_iter_150.pt  meta_model_iter_200.pt  meta_model_iter_250.pt  meta_model_iter_300.pt  meta_model_iter_350.pt  meta_model_iter_400.pt  meta_model_iter_450.pt  meta_model_iter_500.pt
checkpoints/sokoban_MAML_production_run/: best_meta_model.pt
checkpoints/sokoban_RLHF_cuda/: reward_model.pt
checkpoints/sokoban_RLHF_cuda_v2/: reward_model.pt
console/linux/: inference.sh  test.sh  train.sh  tree.sh
console/windows/: analysis.ps1  inference.ps1  test.ps1  train.ps1  tree.ps1
dashboard/: dashboard.py  start.ps1  start.sh
docs/: Training-Pipeline.md  module-index.md
generated_levels/sokoban_PPO_AMD_20260220_140931/: level_001.npy  level_001.txt  level_002.npy  level_002.txt  level_003.npy  level_003.txt  level_004.npy  level_004.txt  level_005.npy  level_005.txt  level_006.npy  level_006.txt  level_007.npy  level_007.txt  level_008.npy  level_008.txt  level_009.npy  level_009.txt  level_010.npy  level_010.txt  level_011.npy  level_011.txt  level_012.npy  level_012.txt  level_013.npy  level_013.txt  level_014.npy  level_014.txt  level_015.npy  level_015.txt  level_016.npy  level_016.txt  (+8 more)
good levels/: good_level 01.txt  good_level 02.txt  good_level 03.txt  good_level 04.txt
logs/: sokoban_A2C_20260125_094957.csv  sokoban_MAML_50_iteration.csv  sokoban_MAML_inference.csv  sokoban_PPO_20260124_233509.csv  sokoban_PPO_20260129_004537.csv  sokoban_PPO_20260129_205715.csv  sokoban_PPO_20260130_150527.csv  sokoban_PPO_CUDA_20260217_000720.csv  sokoban_PPO_CUDA_20260220_140931.csv  zelda_A2C_20260125_105635.csv  zelda_PPO_20251209_001035.csv  zelda_PPO_20251209_005827.csv  zelda_PPO_20251209_022316.csv  zelda_PPO_20251228_234742.csv  zelda_PPO_20260124_143204.csv  zelda_PPO_20260124_214929.csv  zelda_PPO_CUDA_20260228_113105.csv
pcg_env/: activate.txt  pyvenv.cfg
test/: __init__.py  test.py
wrappers/: __init__.py  helper.py  pcgrl_env.py
(+226 files in other folders)
